# Conway-s-GoL-C-

./: .gitignore  CMakeLists.txt  README.md  enviroment.yml
docs/source/: conf.py  index.rst
gol/: gol.txt  gol3  gol3.cpp  gol4  gol4.cpp
include/: gol4.h
include/SFML/Graphics/: Drawable.hpp:Zone.Identifier
src/: CMakeLists.txt
src/gol/: gol4.cpp  main.cpp
tests/: CMakeLists.txt  test_gol4.cpp  test_main.cpp
